--- a/src/game/KnightOnLine.vcxproj.filters
+++ b/src/game/KnightOnLine.vcxproj.filters
@@ -652,6 +652,12 @@
     <ClInclude Include="UICmdEdit.h">
       <Filter>Procedure - Main\UI</Filter>
     </ClInclude>
+    <ClInclude Include="UIChatWhisperOpen.h">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="UIChatWhisperHide.h">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Resource.rc">
@@ -1173,6 +1179,12 @@
       <Filter>Procedure - Main\UI</Filter>
     </ClCompile>
     <ClCompile Include="UICmdEdit.cpp">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UIChatWhisperOpen.cpp">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UIChatWhisperHide.cpp">
       <Filter>Procedure - Main\UI</Filter>
     </ClCompile>
   </ItemGroup>
