--- a/src/tool/N3ME/res/N3ME.rc
+++ b/src/tool/N3ME/res/N3ME.rc
@@ -133,7 +133,7 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "*.N3Scene 으로 부터 오브젝트 배치 데이터 부르기", ID_FILE_IMPORT_POST_DATA_FROM_SCENE
         MENUITEM SEPARATOR
-        MENUITEM "최근 파일",                       ID_FILE_MRU_FILE1, GRAYED
+        MENUITEM "최근 파일",                       ID_FILE_MRU_FILE1
         MENUITEM SEPARATOR
         MENUITEM "종료(&X)",                      ID_APP_EXIT
     END
@@ -200,7 +200,6 @@ BEGIN
         MENUITEM "기본재질로 만들기\t(&D)",             ID_TIP_DEFAULT_MATERIAL
         MENUITEM "Alpha Blending Flag 제거\t(&R)", ID_TIP_REMOVE_ALPHAFLAG
         MENUITEM SEPARATOR
-        MENUITEM "씨앗 뿌리기",                      ID_TIP_SOW_SEED
         MENUITEM "안쓰는 파일 리스트 만들기",              ID_TIP_DELETE_UNUSED_FILES
         MENUITEM "위치가 겹친 오브젝트 제거하기",            ID_TIP_DELETE_OVERLAPPED_OBJECTS
         MENUITEM "선택한 소스 오브젝트 모두 지우기",          ID_TIP_DELETE_SELECTED_SOURCE_OBJECTS
@@ -605,30 +604,6 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,190,148,50,74
     LISTBOX         IDC_LIST_NPCPATHFILENAME,7,7,171,226,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_EDIT_NPCPATHFILENAME,7,244,171,14,ES_AUTOHSCROLL
-END
-
-IDD_SOW_SEED DIALOG 0, 0, 301, 229
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION
-CAPTION "풀심기"
-FONT 9, "돋움"
-BEGIN
-    COMBOBOX        IDC_CB_SEED,141,177,149,170,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_CB_TILEGROUP,1,177,137,171,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "* 심겨진 풀들",IDC_STATIC,7,137,43,8
-    PUSHBUTTON      "지우기",IDC_BTN_DEL_SEED,17,151,33,13
-    PUSHBUTTON      "풀 정보 파일 읽기",IDC_BTN_GRASSINFOLOAD,157,106,64,23
-    PUSHBUTTON      "겜데이타저장",IDC_BTN_SAVEGAME,0,201,214,28
-    CONTROL         "",IDC_STATIC_GRASS,"Static",SS_BLACKFRAME,5,5,130,121
-    PUSHBUTTON      "풀 정보 파일 저장",IDC_BTN_GRASSINFOSAVE,224,106,64,23
-    GROUPBOX        "타일당 디테일",IDC_STATIC,153,11,142,32
-    GROUPBOX        "Brush Size",IDC_STATIC,153,57,142,32
-    GROUPBOX        "선택",IDC_STATIC,153,135,142,32,WS_GROUP
-    CONTROL         "풀심기",IDC_RADIO_SOW,"Button",BS_AUTORADIOBUTTON,166,147,49,9
-    CONTROL         "그룹선택",IDC_RADIO_SELECT,"Button",BS_AUTORADIOBUTTON,224,147,49,9
-    PUSHBUTTON      "종료",IDC_SEED_EXIT,223,200,66,28
-    PUSHBUTTON      "섞기",IDC_BUTTON_RANDOM,89,141,53,24
-    CONTROL         "Slider1",IDC_S_TILE_DETAIL,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,161,27,128,12
-    CONTROL         "Slider2",IDC_SOW_BRUSH_SIZE,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,161,69,128,12
 END
 
 IDD_MAKE_WALL DIALOG 0, 0, 93, 249
@@ -1432,7 +1407,6 @@ BEGIN
         MENUITEM "Set to basic material\t(&D)", ID_TIP_DEFAULT_MATERIAL
         MENUITEM "Remove Alpha Blending Flag\t(&R)", ID_TIP_REMOVE_ALPHAFLAG
         MENUITEM SEPARATOR
-        MENUITEM "Spread seed",                 ID_TIP_SOW_SEED
         MENUITEM "Make unused file list",       ID_TIP_DELETE_UNUSED_FILES
         MENUITEM "Remove overlapped objects",   ID_TIP_DELETE_OVERLAPPED_OBJECTS
         MENUITEM "Remove selected source objects", ID_TIP_DELETE_SELECTED_SOURCE_OBJECTS
