--- a/src/server/AIServer/AIServer.vcxproj
+++ b/src/server/AIServer/AIServer.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -130,6 +130,7 @@
     <ClCompile Include="Ini.cpp" />
     <ClCompile Include="IOCPort.cpp" />
     <ClCompile Include="IOCPSocket2.cpp" />
+    <ClCompile Include="MakeItemGroupSet.cpp" />
     <ClCompile Include="MagicProcess.cpp" />
     <ClCompile Include="MagicTableSet.cpp" />
     <ClCompile Include="MagicType1Set.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="Ini.h" />
     <ClInclude Include="IOCPort.h" />
     <ClInclude Include="IOCPSocket2.h" />
+    <ClInclude Include="MakeItemGroupSet.h" />
     <ClInclude Include="MagicProcess.h" />
     <ClInclude Include="MagicTableSet.h" />
     <ClInclude Include="MagicType1Set.h" />
