Remove unused branch tags from .gitmodules file.
The `branch` option in `.gitmodules` is only relevant when tracking
remote changes to a specific branch, such as a dedicated development
branch. However, we use `master` as both the default development branch
and the tagging mechanism for releases. As we don’t rely on a complex
branching strategy, the `branch` tags are unnecessary for our use case.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,15 @@
 [submodule "src/assets"]
 	path = src/assets
 	url = ../ko-assets
-	branch = 1.1.1
 	shallow = true
 	depth = 1
 [submodule "src/db"]
 	path = src/db
 	url = ../ko-db
-	branch = 1.1.2
+	shallow = true
+	depth = 1
 [submodule "src/vendor"]
 	path = src/vendor
 	url = ../ko-vendor
-	branch = 1.1.0
 	shallow = true
 	depth = 1
