Refactor and centralize configuration loading from ini files.
This change introduces src/common/Ini.cpp and Ini.h to centralize
configuration management. Redundant ini file handling code has been
removed, such as in AIServer/Ini.cpp and Ini.h, reducing duplication
and improving maintainability.

Key changes:
- New centralized ini file handling in src/common.
- Updates to vcxproj files to reference the new implementation.
- Modifications across multiple components to use the shared logic.

This refactor prepares the codebase for future portability, enabling
a smoother transition to a cross-platform library in place of Windows
APIs for ini file management.

--- a/src/game/KnightOnLine.vcxproj
+++ b/src/game/KnightOnLine.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="$(SrcDir)\common\Implode.h" />
     <ClInclude Include="$(SrcDir)\common\JvCryption.h" />
     <ClInclude Include="$(SrcDir)\common\N3Utils.h" />
+    <ClInclude Include="$(SrcDir)\common\Ini.h" />
     <ClInclude Include="$(SrcDir)\engine\N3Base\JpegFile.h" />
     <ClInclude Include="$(SrcDir)\engine\N3Base\BitMapFile.h" />
     <ClInclude Include="$(SrcDir)\engine\N3Base\DFont.h" />
@@ -314,6 +315,7 @@
   <ItemGroup>
     <ClCompile Include="$(SrcDir)\common\Implode.cpp" />
     <ClCompile Include="$(SrcDir)\common\JvCryption.cpp" />
+    <ClCompile Include="$(SrcDir)\common\Ini.cpp" />
     <ClCompile Include="$(SrcDir)\engine\N3Base\JpegFile.cpp" />
     <ClCompile Include="$(SrcDir)\engine\N3Base\BitMapFile.cpp" />
     <ClCompile Include="$(SrcDir)\engine\N3Base\DFont.cpp" />
