--- a/src/server/ItemManager/ItemManager.vcxproj.filters
+++ b/src/server/ItemManager/ItemManager.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="$(SrcDir)\common\Ini.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="DBAgent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -34,6 +37,9 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="$(SrcDir)\common\Ini.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="DBAgent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
