--- a/src/server/AIServer/AIServer.vcxproj.filters
+++ b/src/server/AIServer/AIServer.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClCompile Include="global.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Ini.cpp">
+    <ClCompile Include="$(SrcDir)\common\Ini.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IOCPort.cpp">
@@ -160,7 +160,7 @@
     <ClInclude Include="global.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Ini.h">
+    <ClInclude Include="$(SrcDir)\common\Ini.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="IOCPort.h">
