--- a/src/server/Aujard/Aujard.vcxproj.filters
+++ b/src/server/Aujard/Aujard.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="$(SrcDir)\common\Ini.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Aujard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -35,6 +38,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="$(SrcDir)\common\Ini.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Aujard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
