--- a/src/tool/Option/Option.vcxproj
+++ b/src/tool/Option/Option.vcxproj
@@ -117,6 +117,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="$(SrcDir)\common\Ini.cpp" />
     <ClCompile Include="Option.cpp" />
     <ClCompile Include="OptionDlg.cpp" />
     <ClCompile Include="StdAfx.cpp">
@@ -126,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\common\N3Utils.h" />
+    <ClInclude Include="$(SrcDir)\common\Ini.h" />
     <ClInclude Include="Option.h" />
     <ClInclude Include="OptionDlg.h" />
     <ClInclude Include="StdAfx.h" />
